overflow hidden on errorSection to prevent moment of horizontal scroll during animation.

--- a/styles/sass/partials/_404.scss
+++ b/styles/sass/partials/_404.scss
@@ -16,6 +16,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 20px;
+  overflow: hidden;
   h2 {
     color: $white;
   }
